--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,6 +14,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Ebenezer Ifezulike. It uses data from the mapbox.com and webstack.com!</p>
         <img class="portrait" src="/img/profile.jpeg" />
     </div>
    
